Closed Bug 1364267 Opened 8 years ago Closed 8 years ago

Gamepad on Android is broken

Categories

(Firefox for Android Graveyard :: General, defect)

defect
Not set
normal

Tracking

(firefox55 fixed)

RESOLVED FIXED
Firefox 55
Tracking Status
firefox55 --- fixed

People

(Reporter: rbarker, Assigned: rbarker)

Details

Attachments

(1 file)

Gamepad on Android asserts in debug builds. Additionally, axis values are getting dropped when more than one axis is non-zero. STR: 1) Press a stick to the far right. 2) With out moving from the right, move the stick slightly up or down so the horizontal axis value doesn't change but the virtical axis will emit a value. Expected result: Both axes will generate a value. Actually result: The horizontal axis will got to zero.
Assignee: nobody → rbarker
Comment on attachment 8867010 [details] Bug 1364267 - Prevent Android gamepad from dropping axis values https://reviewboard.mozilla.org/r/138614/#review142112 Any idea what broke this?
Attachment #8867010 - Flags: review?(ted) → review+
(In reply to Ted Mielczarek [:ted.mielczarek] from comment #2) > > Any idea what broke this? Looks like Bug 1289208. Also, it looks like my fix isn't actually correct looking at how it used to work. I'll post an update.
Pushed by rbarker@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/854dc4d83215 Prevent Android gamepad from dropping axis values r=ted
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: