Bug 1364267 - Prevent Android gamepad from dropping axis values r=ted

MozReview-Commit-ID: 3G5xwPKD4mq